<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sample.androidfundamental2.ui.home.HomeFragment"
        android:label="@string/menu_home" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.sample.androidfundamental2.ui.upcoming.UpcomingFragment"
        android:label="@string/menu_upcoming" />

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.sample.androidfundamental2.ui.finished.FinishedFragment"
        android:label="@string/menu_finished" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.sample.androidfundamental2.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.sample.androidfundamental2.ui.settings.SettingsFragment"
        android:label="@string/menu_settings" />

</navigation>
